--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -43,6 +43,11 @@
     border-radius: 3px;
   }
 
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
   &--li-first {
     border-radius: 3px 3px 0 0;
     border-bottom:    0.5px solid $border-blk;
